fix(report): add pagination, update validation and update docs 1. add limit offset pagination and update swagger docs accordingly 2. remove generatedById on dto and use auth user id instead 3. update swagger docs inlcuding schemas and dto's
